<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".EditProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"

            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:orientation="vertical"
                android:padding="24dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="#000000" />


                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_person_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_name"
                    android:padding="8dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edit_surname"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_person_pin_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_surname"
                    android:padding="8dp"
                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/edit_weight"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_monitor_weight_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_weight"
                    android:inputType="numberDecimal"
                    android:padding="8dp"
                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/edit_height"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_height_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_height"
                    android:inputType="numberDecimal"
                    android:padding="8dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edit_bDay"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_calendar_month_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_birthday"
                    android:inputType="datetime"
                    android:onClick="bDay"
                    android:padding="8dp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold">

                </TextView>


                <RadioGroup
                    android:id="@+id/edit_radioGroupGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/edit_radioButtonMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/edit_radioButtonFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/spinnerBloodGroup"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />


                <Spinner
                    android:id="@+id/edit_spinnerBloodGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/edit_button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/black"
                    android:onClick="save"
                    android:text="@string/btn_main"
                    android:textSize="18sp"
                    app:cornerRadius="20dp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>
</RelativeLayout>