<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mainUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="true"/>

            <ImageButton
                android:id="@+id/btnDeleteProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/baseline_delete_forever_24"
                android:contentDescription="@string/delete_profile"/>
        </RelativeLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:shrinkColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthdayDate"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mainBirthdayDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:text="" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="45dp"
                    android:text="@string/weight"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mainWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="45dp"
                    android:text="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mainHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mainGender"
                    android:layout_height="wrap_content"
                    android:text="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spinnerBloodGroup"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mainBloody"
                    android:layout_width="46dp"
                    android:layout_height="wrap_content"
                    android:text="" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btnEditProfile"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:backgroundTint="@color/button"
                android:text="@string/edit_profile"
                android:textSize="12sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnKeepGoing"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/button"
                android:onClick="keepGoing"
                android:text="@string/keep_going"
                android:textSize="12sp"
                app:cornerRadius="20dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
